Commit from LXDE Pootle server by user kizito.: 348 of 379 strings translated (17 fuzzy).

--- a/po/lg.po
+++ b/po/lg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-01 22:11+0000\n"
+"PO-Revision-Date: 2013-09-04 12:03+0000\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1378073490.0\n"
+"X-POOTLE-MTIME: 1378296239.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -25,12 +25,11 @@ msgstr "Puloguramu ennondemu"
 
 #: ../data/lxshortcut.desktop.in.h:1
 msgid "Create new or change existing desktop entry"
-msgstr ""
+msgstr "Kolawo oba kyusa ekisangibwa awakolerwa"
 
 #: ../data/lxshortcut.desktop.in.h:2
-#, fuzzy
 msgid "Shortcut Editor"
-msgstr "Panya"
+msgstr "Kola ku Panya"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>C_ommand line to execute:</b>"
@@ -127,9 +126,8 @@ msgid "with the following file?"
 msgstr "waddewo fayiro eno?"
 
 #: ../data/ui/choose-icon.ui.h:1
-#, fuzzy
 msgid "<b>Choose icon from:</b>"
-msgstr "<b>Londa Kafaananyi Okuva mu:</b>"
+msgstr "<b>Londa kafaananyi okuva mu:</b>"
 
 #: ../data/ui/choose-icon.ui.h:2
 msgid "Choose An Icon..."
@@ -137,15 +135,13 @@ msgstr "Londa Kafaananyi..."
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:4
-#, fuzzy
 msgid "image files"
-msgstr "Fayiro z'ebifaananyi"
+msgstr "fayiro z'ebifaananyi"
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:6
-#, fuzzy
 msgid "system icon theme"
-msgstr "Lubu lw'obufaananyi obuyunzi olukola ku sisitemu yonna"
+msgstr "lubu lw'obufaananyi obuyunzi olukola ku sisitemu yonna"
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -184,9 +180,8 @@ msgid "<b>Last Modification:</b>"
 msgstr "<b>Amakyuka agaasemba:</b>"
 
 #: ../data/ui/file-prop.glade.h:8
-#, fuzzy
 msgid "<b>Last Permissions Change:</b>"
-msgstr "<b>Amabikkula agaasemba:</b>"
+msgstr "<b>Ndukusa Lwe Zaasemba Kukyusibwamu:</b>"
 
 #: ../data/ui/file-prop.glade.h:9
 msgid "<b>Location:</b>"
@@ -237,9 +232,8 @@ msgid "File Properties"
 msgstr "Ebikwata ku fayiro"
 
 #: ../data/ui/file-prop.glade.h:21
-#, fuzzy
 msgid "Hidden file"
-msgstr "Fayiro eza _vidiyo"
+msgstr "Fayiro nkise"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Icon of the file in folder view"
@@ -511,24 +505,26 @@ msgid "Preparing..."
 msgstr "Ntegeka..."
 
 #: ../src/base/fm-file-launcher.c:85
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid desktop entry file: '%s'"
-msgstr "%s tekikola nga kya mu menyu"
+msgstr "'%s' tekikola nga fayiro y'ekisangibwa awakolerwa"
 
 #: ../src/base/fm-file-launcher.c:197
-#, fuzzy, c-format
+#, c-format
 msgid "No default application is set to launch URIs %s://"
-msgstr "Data ey'ekika kya %s gilondere puloguramu enagikolangako"
+msgstr ""
+"Endagiriro oba URI ezitandika ne %s:// zilondere puloguramu enaazikolangako"
 
 #: ../src/base/fm-file-launcher.c:272
 #, c-format
 msgid "Cannot set working directory to '%s': %s"
-msgstr ""
+msgstr "Sisobla kutegeka tterekero erikolerwamu libeere '%s': %s"
 
 #: ../src/base/fm-file-launcher.c:318
 #, c-format
 msgid "Could not determine content type of file '%s' to launch it"
 msgstr ""
+"Fayiro '%s' sisobodde kugibikkula lwa kulemwa kutegeera kika ky'ebigirimu "
 
 #: ../src/base/fm-file-launcher.c:363 ../src/base/fm-templates.c:1066
 #, c-format
@@ -548,22 +544,21 @@ msgid "Trash Can"
 msgstr "Bisuulidwa"
 
 #: ../src/base/fm-mime-type.c:86
-#, fuzzy
 msgid "shortcut to URI"
-msgstr "Panya"
+msgstr "panya egguka ku ndagiriro oba URI"
 
 #: ../src/base/fm-templates.c:1016
 msgid "fm_template_create_file: invalid argument"
-msgstr ""
+msgstr "fm_template_create_file: agumenti tekkirizibwa"
 
 #: ../src/base/fm-terminal.c:248
 msgid "No terminal emulator is set in libfm config"
 msgstr "Entegeka za libfm ebulamu ekika ky'ekiwandikiro"
 
 #: ../src/base/fm-thumbnailer.c:283
-#, fuzzy
 msgid "Invalid description of thumbnailer application"
-msgstr "Ekitegekedwa ng'ekigenderwa tekikkirizibwa"
+msgstr ""
+"Ekitegekedwa ng'okunnyonyola puloguramu ekola ku kulozako tekikkirizibwa"
 
 #: ../src/base/fm-utils.c:136
 msgid "kB"
@@ -600,6 +595,8 @@ msgstr "TiB"
 #, c-format
 msgid "The URI subpath '%s' contains invalid escaped characters"
 msgstr ""
+"Ekitundu ky'ekkubo '%s' erigguka ku ndagiriro oba URI kirimu obubonero "
+"obufuule obutakkirizibwa"
 
 #: ../src/extra/fm-xml-file.c:205
 #, c-format
@@ -727,18 +724,16 @@ msgid "Shows tree of directories in sidebar"
 msgstr "Enkwatagana y'amaterekero erabikire mu kaddirisa ak'okubbali"
 
 #: ../src/gtk/fm-dnd-dest.c:411
-#, fuzzy
 msgid "_Cancel"
-msgstr "Kisazidwamu"
+msgstr "_Sazamu"
 
 #: ../src/gtk/fm-dnd-dest.c:412
 msgid "C_opy"
-msgstr ""
+msgstr "K_oppa"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "_Move"
-msgstr "_Sembeza ku kkono"
+msgstr "_Jjulula"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:415
@@ -1071,19 +1066,16 @@ msgid "Applications"
 msgstr "Puloguramu"
 
 #: ../src/gtk/fm-places-model.c:805 ../src/gtk/fm-places-model.c:983
-#, fuzzy
 msgid "File system"
-msgstr "_Kika Kya Fayiro"
+msgstr "Sisitemu ya fayiro"
 
 #: ../src/gtk/fm-places-model.c:822 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Computer"
-msgstr "Kompyuta Yange"
+msgstr "Kompyuta"
 
 #: ../src/gtk/fm-places-model.c:840 ../src/gtk/fm-places-model.c:1005
-#, fuzzy
 msgid "Network Drives"
-msgstr "Kayungirizi"
+msgstr "Ebibondo Ebiri Ku Kayungirizi"
 
 #: ../src/gtk/fm-places-view.c:124
 msgid "_Mount Volume"
@@ -1098,9 +1090,8 @@ msgid "_Eject Removable Media"
 msgstr "_Wandula Ekitereka Data Ekigyikamu"
 
 #: ../src/gtk/fm-places-view.c:127
-#, fuzzy
 msgid "_Format Volume"
-msgstr "_Wanga Volyumu"
+msgstr "_Kolawo Sisitemu Ya Fayiro Ku Volyumu"
 
 #: ../src/gtk/fm-places-view.c:143
 msgid "_Rename Bookmark Item"
@@ -1188,12 +1179,11 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:383 ../src/gtk/fm-progress-dlg.c:512
 msgid "_Pause"
-msgstr ""
+msgstr "_Yimirizamu"
 
 #: ../src/gtk/fm-progress-dlg.c:391
-#, fuzzy
 msgid "_Resume"
-msgstr "_Zawo"
+msgstr "_Guzuukuze"
 
 #: ../src/gtk/fm-progress-dlg.c:544
 msgid ", "
